--- a/Jira-ya.Infrastructure/Jira-ya.Infrastructure.csproj
+++ b/Jira-ya.Infrastructure/Jira-ya.Infrastructure.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Jira-ya.Domain\Jira-ya.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
