feat: atualizações de service

--- a/Jira-ya.Infrastructure/Jira-ya.Infrastructure.csproj
+++ b/Jira-ya.Infrastructure/Jira-ya.Infrastructure.csproj
@@ -11,4 +11,12 @@
     <ProjectReference Include="..\Jira-ya.Domain\Jira-ya.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.7" />
+  </ItemGroup>
+
 </Project>
