--- a/Jira-ya.Api/appsettings.json
+++ b/Jira-ya.Api/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=TempDatabase.db"
-  }
+  },
+  "RandomUserKey": "RND"
 }
