tests:  melhoria nos testes

--- a/Jira-ya.Api/appsettings.json
+++ b/Jira-ya.Api/appsettings.json
@@ -9,5 +9,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=TempDatabase.db"
   },
-  "RandomUserKey": "RND"
+  "RandomUserKey": "RND",
+  "Jwt": {
+    "Key": "sua-chave-secreta-muito-forte-aqui",
+    "Issuer": "JiraYaApi",
+    "Audience": "JiraYaApi"
+  }
 }
